src/assets/scss/02_molecule/_case-study.scss
.m-case-study {
    position: relative;
    padding: 60px 0;
    overflow: hidden;
    margin: 0;
    transition: all 0.6s ease;
    background: white;
    z-index: 0;

    &.m-case-study-page-content__next {

        &:before {
            display: none;
        }
    }

    &:before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        width: 100%;
        height: 2px;
        background: -moz-linear-gradient(90deg, rgba(223,235,238,0) 5%, rgba(223,235,238,1) 20%, rgba(223,235,238,1) 50%, rgba(223,235,238,1) 80%, rgba(223,235,238,0) 95%); /* FF3.6-15 */
        background: -webkit-linear-gradient(90deg, rgba(223,235,238,0) 5%, rgba(223,235,238,1) 20%, rgba(223,235,238,1) 50%, rgba(223,235,238,1) 80%, rgba(223,235,238,0) 95%); /* Chrome10-25,Safari5.1-6 */
        background: linear-gradient(90deg, rgba(223,235,238,0) 5%, rgba(223,235,238,1) 20%, rgba(223,235,238,1) 50%, rgba(223,235,238,1) 80%, rgba(223,235,238,0) 95%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
        z-index: 9;
    }

    @include breakpoints("tablet") {
        padding: 0;
    }

    &__block {
        height: 180px;
        transition: all 0.6s ease;
        display: none;

        @include breakpoints("tablet") {
            display: block;
        }
    }

    &.-secondary {

        .m-case-study__texture {
            right: 0;
            top: 110px;
            transform: none;
            left: auto;

            @include breakpoints("tablet") {
                top: 0;
            }
        }
    }

    &.-modified {
        .m-case-study__image {
            max-width: 85%;
        }
    }

    &.-visible {

        .a-button,
        h5,
        p,
        .m-case-study__count {
            color: get-color("primary", "white") !important;
            border-color: get-color("primary", "white") !important;
        }
    }

    @include breakpoints("tablet") {

        &.-hovered {
            z-index: 7;
            margin-top: -20px;

            .m-case-study__block {
                height: 200px;
                display: block;
            }

            img {
                transform: scale(1.2);
            }

            .m-case-study__texture {

                img {
                    transform: scale(1.1);
                }
            }


            .a-button,
            h5,
            p,
            .m-case-study__count {
                color: get-color("primary", "white");
                border-color: get-color("primary", "white");
            }
        }
    }

    &__container {
        max-height: 999px;
    }

    &__content {
        width: 100%;
        float: none;

        &-inner {

            @include breakpoints("tablet") {
                padding-left: 80px;
                padding-right: 50px;
            }

            @include breakpoints("lg-desktop") {
                padding-left: 0;
            }
        }

        @include breakpoints("tablet") {
            width: 50%;
            float: left;
        }
    }

    &__image-container {
        width: 100%;
        float: none;
        position: relative;
        margin-bottom: 40px;

        @include breakpoints("tablet") {
            width: calc(50% - 62px);
            float: right;
            margin-right: 64px;
            margin-bottom: 0;
        }

        @include breakpoints("sm-desktop") {
            margin-bottom: 0;
            width: 50%;
            float: right;
        }
    }

    &__texture {
        max-width: 200px;
        position: absolute;
        left: 0;
        top: 110px;
        display: none;

        @include breakpoints("tablet") {
            display: block;
            top: 0;
        }

        img {
            transition: all 0.6s ease !important;
        }
    }

    &__image {
        right: 0;
        z-index: 1;

        @include breakpoints("tablet") {
            position: absolute !important;
            top: 50%;
            transform: translateY(-28%);
            max-width: 100%;
        }

        img {
            position: relative;
            z-index: 1;
            max-width: 100%;
            transition: all 0.6s ease !important;
            max-height: 400px;
            margin: 0 auto;
            display: block;

            @include breakpoints("tablet") {
                max-height: initial;
            }
        }
    }

    &__count {
        color: get-color("neutral", "gray");
        font-family: $font-secondary;
        position: absolute;
        margin-bottom: 20px;
        font-weight: 500;
        letter-spacing: .2em;
        writing-mode: tb-rl;
        transform: rotate(-180deg);
        left: 3%;
        word-spacing: 2em;
        letter-spacing: .15em;
        display: none;

        @include breakpoints("tablet") {
            display: block;
        }

        span {
            color: get-color("neutral", "lighter-gray");
        }
    }

    .a-button {
        @include font-size("smaller");
        color: get-color("secondary", "center-lane");
        border-color: get-color("secondary", "center-lane");
        letter-spacing: .15em;
        padding-bottom: 2px;

        @include breakpoints("tablet") {
            @include font-size("smallest");
        }
    }

    h5 {
        @include font-size(19px);
        @include line-height("medium-large");
        color: get-color("primary", "after-hours");
        font-family: $font-secondary;
        text-transform: uppercase;
        letter-spacing: 0.2em;
        font-weight: 600;

        @include breakpoints("tablet") {
            @include font-size("medium-small");
        }
    }

    p {
        @include font-size(42px);
        @include line-height(48px);
        margin: 0 0 16px 0;

        @include breakpoints("tablet") {
            @include font-size(44px);
            @include line-height(52px);
        }

        @include breakpoints("sm-desktop") {
            @include font-size("larger");
            @include line-height(48px);
        }
    }
}

